tests/compiler/typecheck/function_generalization_3.kk.out
1
========

========
error:
  ┌─ tests/compiler/typecheck/function_generalization_3.kk:6:17
  │
6 │ let z: string = 'hello'.map(constant)
  │                 ^^^^^^^^^^^^^^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - string      | + number    |
    +---------------+-------------+
